# fun-forecast

./: .gitignore  IDEAS.md  LICENSE  README.md  docker-compose.yaml  go.mod  go.sum  main.go  swagger.yml
.build/: git_update.sh
activity/: activity.go  structs.go
activity-schemas/: FYI.md  hike.json  motorbike.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/fun_forecast_backend/: main.py
backend/fun_forecast_backend/activity_schema/: activity.py  dataclasses.py
backend/fun_forecast_backend/shared/: dataclasses.py
backend/fun_forecast_backend/weather/: dataclasses.py  weather.py
backend/resources/activity-schemas/: FYI.md  bicycle.json  climb.json  golf.json  hike.json  kayak.json  motorcycle.json  pickleball.json  picnic.json  run.json  skateboard.json  swim.json  tennis.json  walk.json
backend/src/fun_forecast_backend/: gunicorn.conf.py  main.py
backend/src/fun_forecast_backend/activity_schema/: activity.py  dataclasses.py
backend/src/fun_forecast_backend/core/: standard_logger.py
backend/src/fun_forecast_backend/forecast/: dataclasses.py  forecast.py
backend/src/fun_forecast_backend/location/: dataclasses.py  location.py
backend/src/fun_forecast_backend/shared/: dataclasses.py
backend/src/fun_forecast_backend/weather/: dataclasses.py  weather.py
backend/tests/: test_main.py
forecast/: forecast.go  structs.go
frontend/: .example-env  README.md  ember-cli-build.js  jsconfig.json  package.json
location/: location.go  structs.go
public/: index.html
server/: server.go
ui/: README.md  package-lock.json  (+1 more)
(+149 files in other folders)
